--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -210,7 +210,7 @@ else
 
     function UpdateImportance() {
         usernameValue = $("[name=usernameEntry]").val();
-
+        debugger;
         var model = {
             UserID: currentUserID,
             EmailAddress: currentEmailAddress,
