working on using icon for Important column

--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -20,6 +20,10 @@ body {
     font-size: 14px !important;
 }
 
+.filledIcon {
+
+}
+
 .btn-group button {
     background-color: #4CAF50; /* Green background */
     border: 1px solid green; /* Green border */
