--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -16,6 +16,7 @@
     var searchBy = Model.SearchBy;
     var searchInput = Model.SearchInput;
     var sortBy = Model.SortBy;
+    var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
 
     bool noResults = (Model.TotalItems) == 0;
@@ -35,11 +36,13 @@
     searchCategories.Add(new SelectListItem { Text = "Stack Trace", Value = "StackTrace" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
-<!-- Search form -->
-@using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
-{
-    <div class="container" style="padding-top: 50px !important;">
+
+<div class="container" style="padding-top: 50px !important;">
+    <!-- Search form -->
+    @using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
+    {
         @Html.HiddenFor(m => m.SortBy)
+        @Html.HiddenFor(m=> m.SortDirection)
 
         <div class="block" style="width: 25% !important; display: inline-block; ">
             @Html.Label("Search by: ", new { @class = "mylabel" })
@@ -51,57 +54,66 @@
         </div>
 
         <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 50px; display: inline-block;" />
+     }
+</div>
+<div class="container">
+    <!-- Sort form -->
+    @using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }, FormMethod.Post, new { id = "id" }))
+    {
+    <div class="block" style="width: 25% !important; display: inline-block;">
+        @Html.Label("Sort by: ", new { @class = "mylabel" })
+        @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
     </div>
-}
-*If searching by TimeStamp, make sure the format is YYYY-MM-DD
+        @Html.Label("Ascending", new { @class="mylabel" })
+        @Html.RadioButton("sortDir", "ASC", true)
 
-<!-- Sort form -->
-@using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }, FormMethod.Post, new { id = "id" }))
-{
-    @Html.Label("Sort by: ", new { @class = "mylabel" })
-    @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown", onchange = "this.form.submit();" })
+        @Html.Label("Descending", new { @class = "mylabel" })
+        @Html.RadioButton("sortDir", "DESC")
+        
+        @Html.HiddenFor(m => m.SearchBy)
+        @Html.HiddenFor(m => m.SearchInput)
+        <input type="submit" name="btnSubmit" value="Sort" class="btn btn-default" style="width: 50px; display: inline-block;" />
+    }
+</div>
 
-    @Html.HiddenFor(m => m.SearchBy)
-    @Html.HiddenFor(m => m.SearchInput)
-}
-
-<!-- Paging stuff -->
+    <!-- Paging stuff -->
 <div class="container">
     <div class="text-center">
         <div class="btn-group">
             @Html.ActionLink(linkText: "First",
                             actionName: "Index",
                             controllerName: "LogException",
-                            routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = 1 },
+                            routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = 1 },
                             htmlAttributes: new { @class = "btn btn-default" })
             @Html.ActionLink(linkText: "Previous",
                             actionName: "Index",
                             controllerName: "LogException",
-                            routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
+                            routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
                             htmlAttributes: new { @class = "btn btn-default" })
             @Html.ActionLink(linkText: "Next",
                             actionName: "Index",
                             controllerName: "LogException",
-                            routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
+                            routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
                             htmlAttributes: new { @class = "btn btn-default" })
             @Html.ActionLink(linkText: "Last",
                             actionName: "Index",
                             controllerName: "LogException",
-                            routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = Model.TotalPages },
+                            routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = Model.TotalPages },
                             htmlAttributes: new { @class = "btn btn-default" })
         </div>
     </div>
 
+
     @using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
     {
-        <div class="block">
             @Html.Label("Page: ", new { @class = "mylabel" })
             @Html.TextBox("id", null, new { @class = "mytextbox" })
 
             @Html.HiddenFor(m => m.SortBy)
+            @Html.HiddenFor(m=> m.SortDirection)
             @Html.HiddenFor(m => m.SearchBy)
             @Html.HiddenFor(m => m.SearchInput)
-        </div>
+
         <input type="submit" name="btnSubmit" value="Jump to page" class="btn btn-default" style=" display: inline-block;" />
     }
 </div>
@@ -128,55 +140,54 @@
         <tbody>
             @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
             {
-            <tr>
-                <td>@currentRow.EmailAddress</td>
-                <td>@currentRow.TimeStamp</td>
-                <td>@currentRow.WebRequestID</td>
-                <td>@currentRow.Message</td>
-                <td>@currentRow.MethodName</td>
-                <td>@currentRow.Source</td>
-                <td>@currentRow.StackTrace</td>
-                <!-- icon will go here
-                 button with onClick="openModal()" where openModal contains
-                 x.classList.toggle("change");
-                the css will have settings for the icon and
-                .change settings for the icon
-                https://www.w3schools.com/howto/howto_css_menu_icon.asp -->
-                <td>
-                    <!-- If !Important, show the unfilled icon and have it open the modal/toggle the icon -->
-                    <!-- If Important, show the filled icon and have it markUnimportant/toggle the icon -->
-                    @if (currentRow.Important == null)
-                    {
-                        <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
-                            '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')" />
-                    }
-                    else
-                    {
-                        <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
-                            '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')" />
-                    }
-                </td>
+                <tr>
+                    <td>@currentRow.EmailAddress</td>
+                    <td>@currentRow.TimeStamp</td>
+                    <td>@currentRow.WebRequestID</td>
+                    <td>@currentRow.Message</td>
+                    <td>@currentRow.MethodName</td>
+                    <td>@currentRow.Source</td>
+                    <td>@currentRow.StackTrace</td>
+                    <!-- icon will go here
+                        button with onClick="openModal()" where openModal contains
+                        x.classList.toggle("change");
+                    the css will have settings for the icon and
+                    .change settings for the icon
+                    https://www.w3schools.com/howto/howto_css_menu_icon.asp -->
+                    <td>
+                        <!-- If !Important, show the unfilled icon and have it open the modal/toggle the icon -->
+                        <!-- If Important, show the filled icon and have it markUnimportant/toggle the icon -->
+                        @if (currentRow.Important == null)
+                        {
+                            <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
+                        '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
+                        '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
+                        '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')" />
+                        }
+                        else
+                        {
+                            <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
+                        '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
+                        '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
+                        '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')" />
+                        }
+                    </td>
+                    <!--
+                            (at)if (currentRow.Important == null) //button to mark as important
+                        {
+                            <button class="openModalButton" onclick="openModal()">
+                                Mark as important
+                            </button>
+                        }
+                        else //button to unmark as important
+                        {
+                            <button class="markUnimportantButton" onclick="markUnimportant()">
+                                Undo
+                            </button>
+                        }
+                        -->
 
-                <!--
-                     (at)if (currentRow.Important == null) //button to mark as important
-                    {
-                        <button class="openModalButton" onclick="openModal()">
-                            Mark as important
-                        </button>
-                    }
-                    else //button to unmark as important
-                    {
-                        <button class="markUnimportantButton" onclick="markUnimportant()">
-                            Undo
-                        </button>
-                    }
-                    -->
-
-            </tr>
+                </tr>
             }
         </tbody>
     </table>
@@ -196,7 +207,7 @@ else
 
 @section scripts
 {
-    <script language="javascript" type="text/javascript">
+        <script language="javascript" type="text/javascript">
     var exampleModal;
     var exampleModalVisible = false;
 
@@ -345,5 +356,5 @@ else
             }
         });
     }
-    </script>
-}
+        </script>
+    }
